--- a/Bildebehandling,_diffusjon_og_Prims_algoritme.ipynb
+++ b/Bildebehandling,_diffusjon_og_Prims_algoritme.ipynb
@@ -27,11 +27,18 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Task 1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "LJftckA-wi0t"
       },
       "source": [
-        "## Preperatory work\n",
+        "### Preperatory work\n",
         "Before we start the assignment, we need to prepare by converting the attached image into an array with its instesity as an int. There is no RGB value, because we are looking at a black/white image, so we can use the first value only.\n"
       ]
     },
@@ -535,10 +542,44 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
+      "source": [
+        "## Task g)\n",
+        "The displayed image does not represent the edges very well with all the noise that creates \"edges\", where they should not be. In the next part we are going to try to reduce the noise with image diffusion."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Task 2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## a)\n",
+        "What form does the Fricks first law of diffusion take?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "$J(F,x,t)$ = $a\\frac{\\partial F}{\\partial x}$\n",
+        "\n",
+        "Where ¨\n",
+        "J is the flux of the substance\n",
+        "F is the substance\n",
+        "x is the position\n",
+        "a is the diffusioncoeffisent"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
